HTML file update

--- a/1-Quiz-Game/index.html
+++ b/1-Quiz-Game/index.html
@@ -7,6 +7,42 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <div class="container">
+    
+    <div class="screen active" id="start-screen">
+      <h1>Quiz Game</h1>
+      <p>Test your knowledge with this fun quiz game!</p>
+      <button id="start-btn">Start Quiz</button>
+    </div>
+
+    <div class="screen" id="quiz-screen">
+      <div class="quiz-header">
+        <h2 id="question-text">Question goes here</h2>
+        <p>
+          Question <span id="current-question">1</span> of <span>5</span>
+        </p>
+        <p>Score: <span id="score">0</span></p>
+
+        <div id="answers-container" class="answers-container">
+          <!-- Answer buttons will be dynamically added here -->
+        </div>
+
+        <div class="progress-bar">
+          <div id="progress" class="progress"></div>
+
+        </div>
+
+      </div>
+    </div>
+
+    <div id="result-screen" class="screen">      
+      <h1>Quiz Completed!</h1>
+      <div class="result-info">
+        <p>Your final score is: <span id="final-score">0</span></p>
+        <div id="result-message">Good job!</div>
+      </div>
+      <button id="restart-btn">Restart Quiz</button>
+    </div>
+  </div>
 </body>
 </html>
